# magnet

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: config.rs  logger.rs  mod.rs  runner.rs  simulation.rs  telemetry.rs
tests/: ransom_note_test.rs
