[package]
name = "magnet"
version = "0.0.1"
edition = "2021"
authors = ["r3drun3@noneofyourbusiness.com"]
description = "Magnet — purple-team telemetry & simulation toolkit."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
hostname = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "memoryapi"] }
image = "0.25.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
dirs = "5"
num_cpus = "1.16"


[lib]
name = "magnet"
path = "src/lib.rs"

[profile.release]
opt-level = "z"       # prioritize size over speed
lto = true             # enable link-time optimization
codegen-units = 1      # better optimization, smaller output
strip = true           # remove debug symbols (nightly/beta Cargo only)
panic = "abort"        # smaller runtime, no unwinding tables
