[package]
name = "magnet"
version = "0.8.0"
edition = "2021"
authors = ["r3drun3@noneofyourbusiness.com"]
description = "Magnet — purple-team telemetry & simulation toolkit."

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
hostname = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "winnt", "processthreadsapi", "handleapi", "psapi", "winnls", "memoryapi", "wincrypt", "dpapi", "winerror", "winbase", "minwinbase", "errhandlingapi"] }
image = "0.25.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
dirs = "5"
num_cpus = "1.16"
rusqlite = { version = "0.30", features = ["bundled"] }
libloading = "0.7"
base64 = "0.21"
chrono = "0.4"
aes-gcm = "0.10"
tokio = { version = "1.47", features = ["full"] }
get_if_addrs = "0.5"
cpal = "0.16.0" 
hound = "3.5"
os_info = "3.8.0"
ntapi = "0.4.1"
widestring = "1.1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_Security_Credentials",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Memory",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]}


[lib]
name = "magnet"
path = "src/lib.rs"

[profile.release]
opt-level = "z"       # prioritize size over speed
lto = true             # enable link-time optimization
codegen-units = 1      # better optimization, smaller output
strip = true           # remove debug symbols (nightly/beta Cargo only)
panic = "abort"        # smaller runtime, no unwinding tables
